--- a/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Config/index.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/baggy/Config/index.html.twig
@@ -86,8 +86,7 @@
                 <br/>
                 <img id="androidQrcode" />
                 <script>
-                    const imgBase64 = jrQrcode.getQrBase64('wallabag://{{ app.user.username }}@{{ wallabag_url }}');
-                    document.getElementById('androidQrcode').src = imgBase64;
+                    document.getElementById('androidQrcode').src = jrQrcode.getQrBase64('wallabag://{{ app.user.username }}@{{ wallabag_url }}');
                 </script>
             </div>
         </fieldset>
@@ -186,20 +185,20 @@
                 {{ form_widget(form.user.googleTwoFactor) }}
                 {{ form_errors(form.user.googleTwoFactor) }}
             </div>
-            {% for OTPSecret in app.session.flashbag.get('OTPSecret') %}
+            {% for OtpQrCode in app.session.flashbag.get('OtpQrCode') %}
                 <div class="row">
                     You just enabled the OTP two factor authentication, open your OTP app and use that code to get a one time password.
                     <br/>
                     That code will disapear after a page reload.
                     <br/><br/>
-                    <strong>{{ OTPSecret.code }}</strong>
+                    <strong>{{ app.user.getGoogleAuthenticatorSecret }}</strong>
                     <br/><br/>
                     Or you can scan that QR Code with your app:
                     <br/>
                     <img id="2faQrcode" class="hide-on-med-and-down" />
 
                     <script>
-                        document.getElementById('2faQrcode').src = jrQrcode.getQrBase64('{{ OTPSecret.qrCode }}');;
+                        document.getElementById('2faQrcode').src = jrQrcode.getQrBase64('{{ OtpQrCode }}');;
                     </script>
                 </div>
             {% endfor %}
